# graphiso-extractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  install.bat
include/: application.hpp  fileio.hpp  filereader.hpp  filesystemutils.hpp  filewriter.hpp  gfile.hpp  globalutils.hpp  graphcharacteristics.hpp  graphconverter.hpp  graphdata.hpp  graphfile.hpp  graphfilebase.hpp  graphio.hpp  graphreader.hpp  graphwriter.hpp  greader.hpp  groundfile.hpp  groundreader.hpp  groundwriter.hpp  gwriter.hpp  ifile.hpp  inireader.hpp  ireadable.hpp  itargetable.hpp  iwriteable.hpp  resourcelocation.hpp  vgraphfile.hpp  workcontext.hpp
src/: application.cpp  fileio.cpp  filereader.cpp  filesystemutils.cpp  filewriter.cpp  gfile.cpp  globalutils.cpp  graphcharacteristics.cpp  graphconverter.cpp  graphdata.cpp  graphfile.cpp  graphfilebase.cpp  graphio.cpp  graphreader.cpp  graphwriter.cpp  greader.cpp  groundfile.cpp  groundreader.cpp  groundwriter.cpp  gwriter.cpp  inireader.cpp  main.cpp  resourcelocation.cpp  vgraphfile.cpp
